fix/add-to-cart-button-text-breaking: fix: prevent product list products' button text from wrapping mid word

--- a/assets/css/woocommerce/woocommerce.scss
+++ b/assets/css/woocommerce/woocommerce.scss
@@ -394,6 +394,7 @@ ul.products,
 
 		.button {
 			margin-bottom: 0.236em;
+			word-break: break-word;
 		}
 	}
 }
